istio-service-mesh/traffic-management/reviews-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: default

spec:
  hosts:
  - reviews

  http:

  - match:
    - headers:
        end-user:
          exact: jason

    route:
    - destination:
        host: reviews
        subset: v2

  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 50

    - destination:
        host: reviews
        subset: v3
      weight: 50
